add v2 routes and db connection
